@@ -1,18 +1,21 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.rest.action.user;
 
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.bytes.BytesReference;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
+import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
@@ -20,12 +23,10 @@ import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.security.SecurityContext;
 import org.elasticsearch.xpack.core.security.action.user.ChangePasswordRequestBuilder;
 import org.elasticsearch.xpack.core.security.authc.support.Hasher;
-import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -45,21 +46,15 @@ public class RestChangePasswordAction extends SecurityBaseRestHandler implements
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
         return List.of(
-            new ReplacedRoute(PUT, "/_security/user/{username}/_password",
-                PUT, "/_xpack/security/user/{username}/_password"),
-            new ReplacedRoute(POST, "/_security/user/{username}/_password",
-                POST, "/_xpack/security/user/{username}/_password"),
-            new ReplacedRoute(PUT, "/_security/user/_password",
-                PUT, "/_xpack/security/user/_password"),
-            new ReplacedRoute(POST, "/_security/user/_password",
-                POST, "/_xpack/security/user/_password")
+            Route.builder(PUT, "/_security/user/{username}/_password")
+                .replaces(PUT, "/_xpack/security/user/{username}/_password", RestApiVersion.V_7).build(),
+            Route.builder(POST, "/_security/user/{username}/_password")
+                .replaces(POST, "/_xpack/security/user/{username}/_password", RestApiVersion.V_7).build(),
+            Route.builder(PUT, "/_security/user/_password")
+                .replaces(PUT, "/_xpack/security/user/_password", RestApiVersion.V_7).build(),
+            Route.builder(POST, "/_security/user/_password")
+                .replaces(POST, "/_xpack/security/user/_password", RestApiVersion.V_7).build()
         );
     }
 
@@ -92,7 +87,7 @@ public class RestChangePasswordAction extends SecurityBaseRestHandler implements
             });
     }
 
-    private static final Set<String> FILTERED_FIELDS = Collections.singleton("password");
+    private static final Set<String> FILTERED_FIELDS = Set.of("password", "password_hash");
 
     @Override
     public Set<String> getFilteredFields() {
